--- a/index.html
+++ b/index.html
@@ -545,6 +545,77 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+        <h3 class="modal-title">Leave your contacts and we will call you back</h3>
+        <form class="contact-form">
+          <label class="contact-form-field-wrapper">
+            <span class="contact-form-field-name">Name</span>
+            <span class="contact-form-input-wrapper">
+              <input
+                class="contact-form-input"
+                type="text"
+                name="user_name"
+                required
+                pattern="[a-zA-Zа-яА-ЯіІїЇєЄ']+"
+              />
+              <svg class="contact-form-input-icon" aria-label="person icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="contact-form-field-wrapper">
+            <span class="contact-form-field-name">Phone</span>
+            <span class="contact-form-input-wrapper">
+              <input
+                class="contact-form-input"
+                type="tel"
+                name="user_tel"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+              />
+              <svg class="contact-form-input-icon" aria-label="phone icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="contact-form-field-wrapper">
+            <span class="contact-form-field-name">Email</span>
+            <span class="contact-form-input-wrapper">
+              <input
+                class="contact-form-input"
+                type="email"
+                name="user_email"
+                required
+                pattern="[a-zA-Zа-яА-ЯіІїЇєЄ]+"
+              />
+              <svg class="contact-form-input-icon" aria-label="email icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="contact-form-field-wrapper">
+            <span class="contact-form-field-name">Comment</span>
+            <textarea
+              class="contact-form-comment"
+              name="user_comment"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+          <label class="contact-form-checkbox-wrapper">
+            <input class="contact-form-checkbox" type="checkbox" name="user_policy" required />
+            <svg class="contact-form-checkbox-own" aria-label="check icon" width="16" height="16">
+              <use
+                class="contact-form-checkmark-icon"
+                href="./images/icons.svg#icon-check-mark"
+              ></use>
+            </svg>
+            <span
+              >I accept the terms and conditions of the
+              <a class="privacy-policy-link" href="#"> Privacy Policy</a></span
+            >
+          </label>
+          <button type="submit" class="modal-send-btn modal-opn-btn button">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
