auto-check footer 1.0

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
           <h2 class="subtitle">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-list-item">
-              <a href="" class="customers-list-link">
+              <a href="#" class="customers-list-link">
                 <svg
                   class="customers-list-icon"
                   aria-label="ya&co company logo"
@@ -428,7 +428,7 @@
               </a>
             </li>
             <li class="customers-list-item">
-              <a href="" class="customers-list-link">
+              <a href="#" class="customers-list-link">
                 <svg
                   class="customers-list-icon"
                   aria-label="tagline here company logo"
@@ -440,7 +440,7 @@
               </a>
             </li>
             <li class="customers-list-item">
-              <a href="" class="customers-list-link">
+              <a href="#" class="customers-list-link">
                 <svg
                   class="customers-list-icon"
                   aria-label="third company logo"
@@ -452,7 +452,7 @@
               </a>
             </li>
             <li class="customers-list-item">
-              <a href="" class="customers-list-link">
+              <a href="#" class="customers-list-link">
                 <svg
                   class="customers-list-icon"
                   aria-label="foster peters company logo"
@@ -464,7 +464,7 @@
               </a>
             </li>
             <li class="customers-list-item">
-              <a href="" class="customers-list-link">
+              <a href="#" class="customers-list-link">
                 <svg
                   class="customers-list-icon"
                   aria-label="brand company logo"
@@ -476,7 +476,7 @@
               </a>
             </li>
             <li class="customers-list-item">
-              <a href="" class="customers-list-link">
+              <a href="#" class="customers-list-link">
                 <svg
                   class="customers-list-icon"
                   aria-label="tag line company logo"
@@ -543,7 +543,7 @@
               <input
                 class="footer-subscribe-input"
                 type="email"
-                name="subscribe_user_email"
+                name="subscribe-user-email"
                 required
                 placeholder="E-mail"
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
@@ -585,7 +585,7 @@
               <input
                 class="contact-form-input"
                 type="text"
-                name="user_name"
+                name="user-name"
                 required
                 pattern="[a-zA-Zа-яА-ЯіІїЇєЄ']+"
               />
@@ -600,7 +600,7 @@
               <input
                 class="contact-form-input"
                 type="tel"
-                name="user_tel"
+                name="user-tel"
                 required
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx"
@@ -616,7 +616,7 @@
               <input
                 class="contact-form-input"
                 type="email"
-                name="user_email"
+                name="user-email"
                 required
                 pattern="[a-zA-Zа-яА-ЯіІїЇєЄ]+"
               />
@@ -629,7 +629,7 @@
             <span class="contact-form-field-name">Comment</span>
             <textarea
               class="contact-form-comment"
-              name="user_comment"
+              name="user-comment"
               placeholder="Text input"
             ></textarea>
           </label>
