--- a/portfolio.html
+++ b/portfolio.html
@@ -323,28 +323,26 @@
               <input
                 class="footer-subscribe-input"
                 type="email"
-                name="subscribe_user_email"
+                name="subscribe-user-email"
                 required
                 placeholder="E-mail"
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx"
               />
             </label>
-            <label class="footer-subscribe-field-wrapper">
-              <button type="submit" class="footer-subscribe-btn button">
-                <div class="footer-subscribe-btn-wrapper">
-                  Subscribe
-                  <svg
-                    class="footer-subscribe-icon"
-                    aria-label="paper plane icon"
-                    width="24"
-                    height="24"
-                  >
-                    <use href="./images/icons.svg#icon-paper-plane"></use>
-                  </svg>
-                </div>
-              </button>
-            </label>
+            <button type="submit" class="footer-subscribe-btn button">
+              <div class="footer-subscribe-btn-wrapper">
+                Subscribe
+                <svg
+                  class="footer-subscribe-icon"
+                  aria-label="paper plane icon"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-paper-plane"></use>
+                </svg>
+              </div>
+            </button>
           </form>
         </div>
       </div>
