--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
-        <h3 class="modal-title">Leave your contacts and we will call you back</h3>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="contact-form">
           <label class="contact-form-field-wrapper">
             <span class="contact-form-field-name">Name</span>
