--- a/index.html
+++ b/index.html
@@ -576,80 +576,74 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="contact-form">
           <div class="contact-form-wrapper">
-            <label class="contact-form-field-wrapper">
-              <span class="contact-form-field-name">Name</span>
-              <span class="contact-form-input-wrapper">
-                <input
-                  class="contact-form-input"
-                  type="text"
-                  name="user-name"
-                  required
-                  pattern="[a-zA-Zа-яА-ЯіІїЇєЄ']+"
-                />
-                <svg
-                  class="contact-form-input-icon"
-                  aria-label="person icon"
-                  width="18"
-                  height="24"
-                >
-                  <use href="./images/icons.svg#icon-person-black"></use>
-                </svg>
-              </span>
-            </label>
-            <label class="contact-form-field-wrapper">
-              <span class="contact-form-field-name">Phone</span>
-              <span class="contact-form-input-wrapper">
-                <input
-                  class="contact-form-input"
-                  type="tel"
-                  name="user-tel"
-                  required
-                  pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-                  title="xxx-xxx-xx-xx"
-                />
-                <svg class="contact-form-input-icon" aria-label="phone icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-phone-black"></use>
-                </svg>
-              </span>
-            </label>
-            <label class="contact-form-field-wrapper">
-              <span class="contact-form-field-name">Email</span>
-              <span class="contact-form-input-wrapper">
-                <input
-                  class="contact-form-input"
-                  type="email"
-                  name="user-email"
-                  required
-                  pattern="[a-zA-Zа-яА-ЯіІїЇєЄ]+"
-                />
-                <svg class="contact-form-input-icon" aria-label="email icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-email-black"></use>
-                </svg>
-              </span>
-            </label>
-            <label class="contact-form-field-wrapper">
-              <span class="contact-form-field-name">Comment</span>
-              <textarea
-                class="contact-form-comment"
-                name="user-comment"
-                placeholder="Text input"
-              ></textarea>
-            </label>
-            <label class="contact-form-checkbox-wrapper">
-              <input class="contact-form-checkbox" type="checkbox" name="user_policy" required />
-              <svg class="contact-form-checkbox-own" aria-label="check icon" width="16" height="16">
-                <use
-                  class="contact-form-checkmark-icon"
-                  href="./images/icons.svg#icon-check-mark"
-                ></use>
+            <label class="contact-form-field-wrapper" for="user-name">Name</label>
+            <div class="contact-form-input-wrapper">
+              <input
+                class="contact-form-input"
+                type="text"
+                name="user-name"
+                required
+                pattern="[a-zA-Zа-яА-ЯіІїЇєЄ']+"
+              />
+              <svg class="contact-form-input-icon" aria-label="person icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
-              <span
-                >I accept the terms and conditions of the
-                <a class="privacy-policy-link" href="#"> Privacy Policy</a></span
-              >
-            </label>
-            <button type="submit" class="modal-send-btn modal-opn-btn button">Send</button>
+            </div>
           </div>
+          <div class="contact-form-wrapper">
+            <label class="contact-form-field-wrapper" for="user-tel">Phone</label>
+            <div class="contact-form-input-wrapper">
+              <input
+                class="contact-form-input"
+                type="tel"
+                name="user-tel"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+              />
+              <svg class="contact-form-input-icon" aria-label="phone icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="contact-form-wrapper">
+            <label class="contact-form-field-wrapper" for="user-email">Email</label>
+            <div class="contact-form-input-wrapper">
+              <input
+                class="contact-form-input"
+                type="email"
+                name="user-email"
+                required
+                pattern="[a-zA-Zа-яА-ЯіІїЇєЄ]+"
+              />
+              <svg class="contact-form-input-icon" aria-label="email icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="contact-form-wrapper">
+            <label class="contact-form-field-wrapper">Comment</label>
+            <textarea
+              class="contact-form-comment"
+              name="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="contact-form-wrapper">
+            <label class="contact-form-checkbox-wrapper" for="user-policy"></label>
+            <input class="contact-form-checkbox" type="checkbox" name="user-policy" required />
+            <svg class="contact-form-checkbox-own" aria-label="check icon" width="16" height="16">
+              <use
+                class="contact-form-checkmark-icon"
+                href="./images/icons.svg#icon-check-mark"
+              ></use>
+            </svg>
+            <span
+              >I accept the terms and conditions of the
+              <a class="privacy-policy-link" href="#"> Privacy Policy</a></span
+            >
+          </div>
+          <button type="submit" class="modal-send-btn modal-opn-btn button">Send</button>
         </form>
       </div>
     </div>
