--- a/index.html
+++ b/index.html
@@ -581,7 +581,8 @@
               <input
                 class="contact-form-input"
                 type="text"
-                name="user-name"
+                id="user-name"
+                name="user_name"
                 required
                 pattern="[a-zA-Zа-яА-ЯіІїЇєЄ']+"
               />
@@ -596,7 +597,8 @@
               <input
                 class="contact-form-input"
                 type="tel"
-                name="user-tel"
+                id="user-tel"
+                name="user_tel"
                 required
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx"
@@ -612,7 +614,8 @@
               <input
                 class="contact-form-input"
                 type="email"
-                name="user-email"
+                id="user-email"
+                name="user_email"
                 required
                 pattern="[a-zA-Zа-яА-ЯіІїЇєЄ]+"
               />
@@ -625,23 +628,30 @@
             <label class="contact-form-field-wrapper">Comment</label>
             <textarea
               class="contact-form-comment"
-              name="user-comment"
+              id="user-comment"
+              name="user_comment"
               placeholder="Text input"
             ></textarea>
           </div>
           <div class="contact-form-wrapper">
-            <label class="contact-form-checkbox-wrapper" for="user-policy"></label>
-            <input class="contact-form-checkbox" type="checkbox" name="user-policy" required />
+            <input
+              class="contact-form-checkbox visually-hidden"
+              type="checkbox"
+              id="user-policy"
+              name="user_policy"
+              required
+              value="true"
+            />
+            <label class="contact-form-checkbox-wrapper" for="user-policy"
+              >I accept the terms and conditions of the
+              <a class="privacy-policy-link" href="#"> Privacy Policy</a></label
+            >
             <svg class="contact-form-checkbox-own" aria-label="check icon" width="16" height="16">
               <use
                 class="contact-form-checkmark-icon"
                 href="./images/icons.svg#icon-check-mark"
               ></use>
             </svg>
-            <span
-              >I accept the terms and conditions of the
-              <a class="privacy-policy-link" href="#"> Privacy Policy</a></span
-            >
           </div>
           <button type="submit" class="modal-send-btn modal-opn-btn button">Send</button>
         </form>
