--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                 class="contact-form-input"
                 type="text"
                 id="user-name"
-                name="user_name"
+                name="user-name"
                 required
                 pattern="[a-zA-Zа-яА-ЯіІїЇєЄ']+"
               />
@@ -598,7 +598,7 @@
                 class="contact-form-input"
                 type="tel"
                 id="user-tel"
-                name="user_tel"
+                name="user-tel"
                 required
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx"
@@ -615,7 +615,7 @@
                 class="contact-form-input"
                 type="email"
                 id="user-email"
-                name="user_email"
+                name="user-email"
                 required
                 pattern="[a-zA-Zа-яА-ЯіІїЇєЄ]+"
               />
@@ -629,7 +629,7 @@
             <textarea
               class="contact-form-comment"
               id="user-comment"
-              name="user_comment"
+              name="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
@@ -638,7 +638,7 @@
               class="contact-form-checkbox visually-hidden"
               type="checkbox"
               id="user-policy"
-              name="user_policy"
+              name="user-policy"
               required
               value="true"
             />
