--- a/index.html
+++ b/index.html
@@ -575,8 +575,8 @@
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="contact-form">
-          <div class="contact-form-wrapper">
-            <label class="contact-form-field-wrapper" for="user-name">Name</label>
+          <div class="contact-form-field-wrapper">
+            <label class="contact-form-field-name" for="user-name">Name</label>
             <div class="contact-form-input-wrapper">
               <input
                 class="contact-form-input"
@@ -591,8 +591,8 @@
               </svg>
             </div>
           </div>
-          <div class="contact-form-wrapper">
-            <label class="contact-form-field-wrapper" for="user-tel">Phone</label>
+          <div class="contact-form-field-wrapper">
+            <label class="contact-form-field-name" for="user-tel">Phone</label>
             <div class="contact-form-input-wrapper">
               <input
                 class="contact-form-input"
@@ -608,8 +608,8 @@
               </svg>
             </div>
           </div>
-          <div class="contact-form-wrapper">
-            <label class="contact-form-field-wrapper" for="user-email">Email</label>
+          <div class="contact-form-field-wrapper">
+            <label class="contact-form-field-name" for="user-email">Email</label>
             <div class="contact-form-input-wrapper">
               <input
                 class="contact-form-input"
@@ -624,8 +624,8 @@
               </svg>
             </div>
           </div>
-          <div class="contact-form-wrapper">
-            <label class="contact-form-field-wrapper">Comment</label>
+          <div class="contact-form-comment-wrapper">
+            <label class="contact-form-field-name" for="user-comment">Comment</label>
             <textarea
               class="contact-form-comment"
               id="user-comment"
@@ -633,25 +633,31 @@
               placeholder="Text input"
             ></textarea>
           </div>
-          <div class="contact-form-wrapper">
+
+          <div class="contact-form-checkbox-wrapper">
             <input
               class="contact-form-checkbox visually-hidden"
               type="checkbox"
-              id="user-policy"
-              name="user-policy"
+              id="user-privacy"
+              name="user-privacy"
               required
               value="true"
             />
-            <label class="contact-form-checkbox-wrapper" for="user-policy"
+            <label class="contact-form-checkbox-name" for="user-privacy"
+              ><span class="contact-form-checkbox-own">
+                <svg
+                  class="contact-form-checkbox-icon"
+                  aria-label="check icon"
+                  width="10"
+                  height="8"
+                >
+                  <use
+                    class="contact-form-checkmark-icon"
+                    href="./images/icons.svg#icon-check-mark"
+                  ></use></svg></span
               >I accept the terms and conditions of the
-              <a class="privacy-policy-link" href="#"> Privacy Policy</a></label
+              <a class="privacy-policy-link" href="#">Privacy Policy</a></label
             >
-            <svg class="contact-form-checkbox-own" aria-label="check icon" width="16" height="16">
-              <use
-                class="contact-form-checkmark-icon"
-                href="./images/icons.svg#icon-check-mark"
-              ></use>
-            </svg>
           </div>
           <button type="submit" class="modal-send-btn modal-opn-btn button">Send</button>
         </form>
