auto-check modal 1.8

--- a/index.html
+++ b/index.html
@@ -643,8 +643,8 @@
               required
               value="true"
             />
-            <label class="contact-form-checkbox-name" for="user-privacy"
-              ><span class="contact-form-checkbox-own">
+            <label class="contact-form-checkbox-name" for="user-privacy">
+              <span class="contact-form-checkbox-own">
                 <svg
                   class="contact-form-checkbox-icon"
                   aria-label="check icon"
