--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                     class="contact-form-checkmark-icon"
                     href="./images/icons.svg#icon-check-mark"
                   ></use></svg></span
-              >I accept the terms and conditions of the
+              >I accept the terms and conditions of the&nbsp;
               <a class="privacy-policy-link" href="#">Privacy Policy</a></label
             >
           </div>
